# vbf

./: .README.un~  .main.c.un~  CMakeLists.txt  Makefile  README  a.out  bf.c  bf.h  gui  log.c  log.h  main.c  main.c~  stack.c  stack.h  str.c  str.h  tui.c  tui.h  utils.c  utils.h  vbf  xmalloc.c  xmalloc.h
backend/: font.h  gui.c  gui.h  tui.c  tui.h
example/: fibo.b
release/: vbf
